# claude-office

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  pyproject.toml  reddit_release.md
.github/workflows/: ci.yml  type-drift.yml
backend/: README.md  pyproject.toml  pyrightconfig.json
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/api/routes/: agents.py  projects.py  sessions.py  tasks.py
backend/app/core/: broadcast_service.py  event_processor.py  project_registry.py  state_machine.py  task_persistence.py  transcript_watcher.py
backend/app/core/handlers/: agent_handler.py  session_handler.py
backend/app/db/: agent_store.py  migrate_projects.py  models.py
backend/app/models/: agents.py  common.py  events.py  projects.py  sessions.py  tasks.py
backend/app/services/: git_service.py  task_service.py
backend/app/services/adapters/: __init__.py  ao.py
backend/tests/: test_agent_lifecycle.py  test_agent_persistence.py  test_agent_store.py  test_agent_type.py  test_ao_adapter.py  test_boss_identity.py  test_broadcast_projects.py  test_event_processor_projects.py  test_multi_boss_merged.py  test_project_grouped_state.py  test_project_grouped_state_adv.py  test_project_models.py  test_project_name_derivation.py  test_project_persistence.py  test_project_registry.py  test_project_registry_db.py  test_project_registry_edge.py  test_projects_api.py  test_subagent_linking.py  test_task_model.py  test_task_service.py  test_tasks_api.py  test_transcript_watcher_discovery.py  test_worktree_session_cleanup.py
docs/: AGENT-ORCHESTRATOR-SETUP.md  AI_SUMMARY.md  ANIMATION-SYSTEM.md  ARCHITECTURE.md  DATA-FLOW.md  DOCKER.md  QUICKSTART.md  WHITEBOARD.md
frontend/: package.json  vitest.config.mts
frontend/src/: config.ts
frontend/tests/: agentConvert.test.ts  agentFilter.test.ts  agentMachineSpawn.test.ts  gameStoreCompaction.test.ts  i18n.test.ts  multiRoom.test.ts  projectStore.test.ts  (+9 more)
hooks/: README.md  pyproject.toml
hooks/src/claude_office_hooks/: config.py  event_mapper.py  main.py
opencode-plugin/: package.json
scripts/: README.md
(+121 files in other folders)
