[project]
name = "claude-office-visualizer"
version = "0.10.0"
description = "Real-time pixel art visualization of Claude Code operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.134.0",
    "uvicorn[standard]>=0.41.0",
    "websockets>=16.0",
    "sqlalchemy>=2.0.47",
    "alembic>=1.18.4",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "httpx>=0.28.1",
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "rich>=14.3.3",
    "greenlet>=3.3.2",
    "anthropic>=0.84.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "pyright>=1.1.408",
    "pre-commit>=4.5.1",
]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "SIM",
]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = [
    "app",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
timeout = 5

[tool.hatch.build.targets.wheel]
packages = [
    "app",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.4",
    "pre-commit>=4.5.1",
]
