[project]
name = "claude-office-hooks"
version = "0.11.0"
description = "Hooks for Claude Office Visualizer"
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

[project.scripts]
claude-office-hook = "claude_office_hooks.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.pyright]
pythonVersion = "3.14"
typeCheckingMode = "strict"
include = ["src"]
